generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["filterJson", "fullTextSearch"]
  binaryTargets   = ["native"]
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

model Post {
  id            Int           @id @default(autoincrement())
  title         String
  public        Boolean       @default(false)
  slug          String        @unique
  image         String?
  excerpt       String?
  meta          Json?
  cover         String?
  status        PostStatus    @default(DRAFT)
  browseCount   Int           @default(0) @map("browse_count") @db.UnsignedInt
  commentsCount Int           @default(0) @map("comments_count") @db.UnsignedInt
  likesCount    Int           @default(0) @map("likes_count") @db.UnsignedInt
  /// 关联用户
  userId        Int           @map("user_id")
  /// 分类
  categoryId    Int           @map("category_id") @db.UnsignedInt
  createdAt     DateTime      @default(now()) @map("created_at")
  updatedAt     DateTime      @default(now()) @updatedAt @map("updated_at")
  category      Category      @relation(fields: [categoryId], references: [id])
  user          User          @relation(fields: [userId], references: [id])
  /// 评论
  comments      Comment[]
  /// 文章
  content       Content?
  favoritings   Favorite[]
  likes         Like[]
  tags          TagsOnPosts[]

  @@index([categoryId], name: "categoryId")
  @@index([userId], name: "userId")
  @@map("posts")
}

model User {
  id           Int        @id @default(autoincrement())
  email        String?    @unique
  name         String
  slug         String     @unique
  /// 链接
  url          String?
  meta         Json?
  cover        String?
  bio          String?
  description  String?
  mobile       String?
  openid       String?
  password     String
  loggedAt     DateTime   @default(now()) @map("logged_at")
  createdAt    DateTime   @default(now()) @map("created_at")
  updatedAt    DateTime   @default(now()) @updatedAt @map("updated_at")
  deleteAt     DateTime?  @map("delete_at")
  avatar       String?
  // token       String
  posts        Post[]
  comments     Comment[]
  favorites    Favorite[]
  followers    Follower[] @relation("follower")
  followings   Follower[] @relation("following")
  likes        Like[]
  updatedPwdAt DateTime   @default(now()) @map("updated_pwd_at")

  @@map("users")
}

model Tag {
  id        Int           @id @default(autoincrement())
  slug      String        @unique
  createdAt DateTime      @default(now()) @map("created_at")
  updatedAt DateTime      @default(now()) @updatedAt @map("updated_at")
  meta      Json?
  posts     TagsOnPosts[]

  @@map("tags")
}

model Category {
  id          Int      @id @default(autoincrement()) @db.UnsignedInt
  slug        String   @unique
  name        String
  description String?
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @default(now()) @updatedAt @map("updated_at")
  post_count  Int      @default(0)
  meta        Json?
  posts       Post[]

  @@map("categories")
}

model Topic {
  id Int @id @default(autoincrement())

  @@map("topics")
}

model Setting {
  id Int @id @default(autoincrement())

  @@map("settings")
}

model Comment {
  id        Int      @id @default(autoincrement())
  postId    Int      @map("post_id")
  userId    Int      @map("user_id")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @default(now()) @updatedAt @map("updated_at")
  post      Post     @relation(fields: [postId], references: [id])
  user      User     @relation(fields: [userId], references: [id])

  @@index([postId], name: "postId")
  @@index([userId], name: "userId")
  @@map("comments")
}

model Favorite {
  id        Int      @id @default(autoincrement())
  userId    Int      @map("user_id")
  postId    Int      @map("post_id")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @default(now()) @updatedAt @map("updated_at")
  post      Post     @relation(fields: [postId], references: [id])
  user      User     @relation(fields: [userId], references: [id])

  @@index([postId], name: "postId")
  @@index([userId], name: "userId")
  @@map("favorites")
}

model Content {
  id        Int      @id @default(autoincrement())
  postId    Int      @unique @map("post_id")
  html      String?
  markdown  String?
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @default(now()) @updatedAt @map("updated_at")
  post      Post     @relation(fields: [postId], references: [id])

  @@map("contents")
}

model Collection {
  id Int @id @default(autoincrement())

  @@map("collections")
}

model Like {
  id        Int      @id @default(autoincrement())
  userId    Int      @map("user_id")
  postId    Int      @map("post_id")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @default(now()) @updatedAt @map("updated_at")
  post      Post     @relation(fields: [postId], references: [id])
  user      User     @relation(fields: [userId], references: [id])

  @@index([postId], name: "postId")
  @@index([userId], name: "userId")
  @@map("likes")
}

model Media {
  id          Int      @id @default(autoincrement())
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @updatedAt @map("updated_at")
  alt         String
  description String?
  filename    String
  path        String   @unique
  type        String

  @@map("medias")
}

model Menu {
  id        Int      @id @default(autoincrement())
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @default(now()) @updatedAt @map("updated_at")

  @@map("menus")
}

model Role {
  id        Int      @id @default(autoincrement())
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @default(now()) @updatedAt @map("updated_at")

  @@map("roles")
}

model Permission {
  id        Int      @id @default(autoincrement())
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @default(now()) @updatedAt @map("updated_at")

  @@map("permissions")
}

model TagsOnPosts {
  postId    Int      @map("post_id")
  tagId     Int      @map("tag_id")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @default(now()) @updatedAt @map("updated_at")
  post      Post     @relation(fields: [postId], references: [id])
  tag       Tag      @relation(fields: [tagId], references: [id])

  @@id([postId, tagId])
  @@index([tagId], name: "tagId")
  @@map("tags_on_posts")
}

model Follower {
  followerId  Int      @map("follower_id")
  followingId Int      @map("following_id")
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @default(now()) @updatedAt @map("updated_at")
  follower    User     @relation("follower", fields: [followerId], references: [id])
  following   User     @relation("following", fields: [followingId], references: [id])

  @@id([followerId, followingId])
  @@index([followerId], name: "followerId")
  @@index([followingId], name: "followingId")
  @@map("followers")
}

model Verification {
  id        Int      @id @default(autoincrement())
  code      String
  token     String
  captcha   String?
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @default(now()) @updatedAt @map("updated_at")

  @@map("verifications")
}

model Ip {
  ip String @id

  @@map("ips")
}

model View {
  id        Int      @id @default(autoincrement())
  ip        String
  url       String
  bid       String?
  area      String?
  areaInfo  Json     @default("{}")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @default(now()) @updatedAt @map("updated_at")
  ua        String?  @db.VarChar(500)

  @@map("views")
}

enum PostStatus {
  PUBLISHED
  PRIVATE
  PASSWORD
  DRAFT
}

model Cache {
  key        String   @id
  value      String   @db.LongText
  expiration DateTime @default(now())

  @@map("cache")
}
